--- a/AI-Bio-ML-NLP.mediawiki
+++ b/AI-Bio-ML-NLP.mediawiki
@@ -1,6 +1,6 @@
 AI, Algorithms, Bioinformatics, Biotech, Data Mining, Data Structures, Machine Learning, NLP, ...
 
-= Bioinformatics, Biotech =
+== Bioinformatics, Biotech ==
 * [https://github.com/forio/GeneticAlgorithms.jl GeneticAlgorithms.jl] is a lightweight framework that simplifies the process of creating genetic algorithms and running them in parallel.
 * Circuitscape.jl:: A [https://github.com/tanmaykm/Circuitscape.jl Julia implementation] of the [http://www.circuitscape.org/ Circuitscape] lib in Python, that uses electronic circuit theory to solve problems in landscape ecology.
 
@@ -24,11 +24,3 @@ AI, Algorithms, Bioinformatics, Biotech, Data Mining, Data Structures, Machine L
 * NLopt.jl:: Package to call the [https://github.com/JuliaOpt/NLopt.jl NLopt nonlinear-optimization library] from the Julia language.
 
 
-== Statistics ==
-* [https://github.com/JuliaStats/Stats.jl Basic statistics functions for Julia].
-* The [http://juliastats.github.io/Distributions.jl/index.html Distributions] package.
-* The [http://juliastats.github.io/DataFrames.jl/io.html DataFrames manual section on IO]
-* [https://github.com/dmbates/MixedModels.jl GLMM]
-* [https://github.com/lindahua/DiscreteInference.jl Viterbi algorithm]
-* [https://github.com/johnmyleswhite/SmoothingKernels.jl Smoothing kernels for use in kernel regression and kernel density estimation].
-* MCMC.jl:: is a [https://github.com/JuliaStats/MCMC.jl generic engine for implementing Bayesian statistical models using Markov Chain Monte Carlo (MCMC) methods]. 
